--- a/src/app/rides/rides.page.html
+++ b/src/app/rides/rides.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>Катки</ion-title>
     <ion-buttons slot="start">
-      <ion-back-button>Back</ion-back-button>
+      <ion-back-button defaultHref="/">Back</ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
