--- a/src/app/rides/rides.page.html
+++ b/src/app/rides/rides.page.html
@@ -4,6 +4,11 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/">Back</ion-back-button>
     </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button mode="md">
+        <ion-icon icon="add-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
