Init Create ride

--- a/src/app/rides/rides.page.html
+++ b/src/app/rides/rides.page.html
@@ -5,7 +5,7 @@
       <ion-back-button defaultHref="/">Back</ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button mode="md">
+      <ion-button routerDirection="forward" routerLink="create">
         <ion-icon icon="add-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
